spacing fixes

--- a/girleffect/static_src/site/patterns/00-atoms/body-text/_body-text.scss
+++ b/girleffect/static_src/site/patterns/00-atoms/body-text/_body-text.scss
@@ -1,6 +1,5 @@
 .body-text-container {
     @include background-container;
-    margin-bottom: 0;
 }
 
 .body-text {
