--- a/girleffect/static_src/site/sass/abstracts/_mixins.scss
+++ b/girleffect/static_src/site/sass/abstracts/_mixins.scss
@@ -157,12 +157,15 @@
 */
 
 @mixin background-container {
-    margin-bottom: 1rem;
-    padding: 1rem 0;
+    padding: 0 0 2rem;
     background-size: cover;
     background-position: 50% 50%;
 
     @include media-query(tablet-portrait) {
-        padding: 2rem 0;
+        padding-bottom: 3rem;
+    }
+
+    @include media-query(container) {
+        padding-bottom: 4rem;
     }
 }
